global/_numberedsteps.scss
body {
    counter-reset: css-counter 0;
  }
  
  .numbered-step {
    counter-increment: css-counter 1;
    /*width: 500px;*/
    margin: 0px;
    padding: 10px;
    padding-left: 40px;
    position: relative;
  }
  
  .numbered-step:before {
    content: counter(css-counter);
    width: 33px;
    height: 33px;
    text-align: center;
    border: solid 3px $grey-3; // #bfc1c3
    position: absolute;
    border-radius: 16px;
    z-index: 2;
    padding: 4px 0px 0px 0px;
    left: 0px;
    background: $white;
    color: $grey-0; // #212529
  }
  
  .numbered-step:after {
    content: "";
    display: block;
    width: 2px;
    background: $grey-3; // #bfc1c3
    position: absolute;
    left: 16px;
    height: 100%;
    top: 0;
  }

/*
-------------------------------------------------------------------------------
3743 - Timeline component
-------------------------------------------------------------------------------
*/

.body--timeline {
  .a-body__inner .numbered-step:nth-of-type(odd)::before {
    right: -9px;
    left: auto;
  }
  .numbered-step:before {
    content: "";
    width: 20px;
    height: 20px;
    text-align: center;
    /* border: solid 3px #ccc; */
    border: none;
    position: absolute;
    border-radius: 16px;
    z-index: 2;
    padding: 4px 0 0 0;
    left: -11px;
    top: 23px;
    background: $grey-3;
    color: #343434;
  }

  .a-body__inner .numbered-step:nth-of-type(odd) {
    float: left;
    display: block;
    width: 50%;
    text-align: right;
    padding-right: 40px;
  }
  .numbered-step {
    clear: both;
    padding-right: 15px;
  }

  .a-body__inner .numbered-step:nth-of-type(odd)::after {
    right: 0px;
    left: auto;
  }
  .numbered-step:after {
    content: "";
    display: block;
    width: 2px;
    background: $grey-3;
    position: absolute;
    left: -2px;
    height: 100%;
    top: 0;
  }
  .a-body__inner .numbered-step:nth-of-type(even) {
    float: right;
    display: block;
    width: 50%;
  }

  @media (max-width: 720px) {
    .a-body__inner .numbered-step:nth-of-type(odd) {
      float: left;
      display: block;
      width: 100%;
      text-align: left;
    }
    .a-body__inner .numbered-step:nth-of-type(odd)::before {
      right: auto;
      left: -11px;
    }
    .a-body__inner .numbered-step:nth-of-type(odd)::after {
      right: auto;
      left: -2px;
    }
  
    .a-body__inner .numbered-step:nth-of-type(even) {
      float: left;
      display: block;
      width: 100%;
    }
  }
}

